--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -4,71 +4,189 @@
 @import 'libs/skel';
 
 /*
-	Prologue by HTML5 UP
+	Alpha by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Section/Article */
+/* Basic */
 
-	section, article {
-		> .last-child,
-		&.last-child {
-			margin-bottom: 0;
-		}
+	pre, code {
+		position: relative;
+		-ms-behavior: url('assets/js/ie/PIE.htc');
 	}
 
 /* Form */
 
-	form {
-		input[type="text"],
-		input[type="email"],
-		input[type="password"],
-		select,
-		textarea {
-			-ms-behavior: url('assets/js/ie/PIE.htc');
+	input[type="text"],
+	input[type="password"],
+	input[type="email"],
+	select,
+	textarea {
+		position: relative;
+		-ms-behavior: url('assets/js/ie/PIE.htc');
+		line-height: 3em;
+	}
+
+	input[type="checkbox"],
+	input[type="radio"], {
+		opacity: 1;
+		z-index: auto;
+
+		& + label {
+			&:before {
+				display: none;
+			}
 		}
 	}
 
 /* Button */
 
-	input[type="button"],
 	input[type="submit"],
 	input[type="reset"],
-	button,
+	input[type="button"],
 	.button {
+		position: relative;
 		-ms-behavior: url('assets/js/ie/PIE.htc');
+
+		&.alt {
+			border: solid 2px _palette(border);
+		}
+	}
+
+/* Box */
+
+	.box {
+		position: relative;
+		-ms-behavior: url('assets/js/ie/PIE.htc');
+
+		.image {
+			&.featured {
+				margin: 2em 0;
+				width: 100%;
+			}
+		}
+	}
+
+/* Icon */
+
+	.icon {
+		&.major {
+			position: relative;
+			-ms-behavior: url('assets/js/ie/PIE.htc');
+		}
+	}
+
+/* Image */
+
+	.image {
+		position: relative;
+		-ms-behavior: url('assets/js/ie/PIE.htc');
+
+		img {
+			position: relative;
+			-ms-behavior: url('assets/js/ie/PIE.htc');
+		}
 	}
 
 /* Header */
 
-	#nav {
-		ul {
-			li {
-				a {
-					color: #888;
+	#header {
+		nav {
+			> ul {
+				> li {
+					a {
+						color: #fff;
+						display: inline-block;
+						text-decoration: none;
+						border: 0;
 
-					&.active {
-						background: #1C2022;
+						&.icon {
+							&:before {
+								color: #fff;
+								margin-right: 0.5em;
+							}
+						}
+					}
+				}
+			}
+		}
+
+		&.alt {
+			color: #fff;
+
+			nav {
+				> ul {
+					> li {
+						a:not(.button) {
+							&.icon {
+								&:before {
+									color: rgba(255,255,255,0.75);
+								}
+							}
+						}
+
+						&.active {
+							a:not(.button) {
+								background-color: rgba(255,255,255,0.2);
+							}
+						}
 					}
 				}
 			}
 		}
 	}
 
-	#headerToggle {
-		.toggle {
-			background-color: #888;
+	.dropotron {
+		border: solid 1px _palette(border);
+
+		&.level-0 {
+			margin-top: 0;
+
+			&:before {
+				display: none;
+			}
+		}
+	}
+
+/* Banner */
+
+	#banner {
+		background-attachment:	scroll;
+		background-image:		url('../../images/banner.jpg');
+		background-position:	auto;
+		background-repeat:		no-repeat;
+		background-size:		cover;
+		-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
+
+		input[type="submit"],
+		input[type="reset"],
+		input[type="button"],
+		.button {
+			border: solid 2px #fff;
 		}
 	}
 
 /* Main */
 
 	#main {
-		> section {
-			&.cover {
-				background-position: auto;
-				-ms-behavior: url('assets/js/ie/backgroundsize.min.htc');
-			}
+		position: relative;
+		z-index: 1;
+	}
+
+/* CTA */
+
+	#cta {
+		input[type="text"],
+		input[type="password"],
+		input[type="email"],
+		select,
+		textarea {
+			background: _palette(accent2, bg);
+			border: solid 2px #fff;
+		}
+
+		.formerize-placeholder {
+			color: #fff !important;
 		}
 	}
